# cli-search

./: .env.example  .gitignore  Cargo.toml  README.md  config.example.toml  flake.nix  shell.nix
src/: main.rs
