[package]
name = "search"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
chrono = { version = "0.4.34", features = ["serde"] }
clap = { version = "4.5.1", features = ["env", "derive"] }
dotenvy = "0.15.7"
enum-iterator = "2.0.0"
inquire = { version = "0.7.0", features = ["chrono"] }
open = "5.0.1"
serde = { version = "1.0.197", features = ["derive"] }
toml = "0.8.10"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
urlencoding = "2.1.3"
